2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

        * gconf/gconf.m4.in: New file. GCONF_SCHEMA_CONFIG_SOURCE macro
	* configure.in: add gconf.m4 to AC_OUTPUT
        * Makefile.am: add gconf.m4 to EXTRA_DIST and install-data-local
	Setup a default gconf source on make install.
        * galeon.spec.in: Distribute also the path file and
        the directories for the default source.
        * gconf/Makefile.am: install the default path as "path" instead
        of "path.example". Add GCONF_ETCDIR define.
        * gconf/gconftool.c: Add --get-default-source option.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* gconf/gconfd.oafinfo.in: Renamed -> gconfd.server.in.

	* Makefile.am: Install gconfd.server into the correct dir
	for bonobo-activation.

2001-08-03  Abel Cheung <maddog@linux.org.hk>

	* configure.in: Added "zh_CN.GB2312" to ALL_LINGUAS.
	
2001-08-02  Havoc Pennington  <hp@pobox.com>

	* configure.in: version 1.1.1

	* autogen.sh: don't search for subdirs to autogen, that's just
	annoying if you have a make dist directory laying around

2001-08-01  Michael Meeks  <michael@ximian.com>

	* port to bonobo-activation from oaf.

2001-07-28  Yanko Kaneti  <yaneti@declera.com>

	* gconf/gconftool.c (main): s/all-pairs/all-entries/ in the error
	messages

2001-07-24  Darin Adler  <darin@bentspoon.com>

	Merge from stable.

	* acinclude.m4: Set BUILD_INCLUDED_LIBINTL for compatibility
	with newer versions of gettext.

2001-07-23  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconfd.c (main): don't warn about failure to create
	~/.gconfd if EEXIST

	* gconf/gconf.c (gconf_engine_all_entries): convert empty string 
	to NULL

	* gconf/gconf-database.c
	(impl_ConfigDatabase2_all_entries_with_schema_name): don't give
	ORBit any NULL strings in the array, avoids a core dump

	* gconf/gconftool.c (list_pairs_in_dir): put a newline after the
	error message

2001-07-16  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	