@@ -15,21 +15,3 @@ AC_ARG_WITH(gconf-source,
   AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
   AC_MSG_RESULT("Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation")
 ])
-
-dnl AM_PATH_GCONF
-dnl Define GCONF_SCHEMA_CONFIG_SOURCE
-dnl
-AC_DEFUN(AM_GCONF_SOURCE,
-[
-if test "x$GCONF_SCHEMA_INSTALL_SOURCE" = "x"; then
-  GCONF_SCHEMA_CONFIG_SOURCE=`gconftool --get-default-source`
-else
-  GCONF_SCHEMA_CONFIG_SOURCE=$GCONF_SCHEMA_INSTALL_SOURCE
-fi
-
-AC_ARG_WITH(gconf-source, 
-[  --with-gconf-source=sourceaddress      Where to install schema files.],GCONF_SCHEMA_CONFIG_SOURCE="$withval",)
-
-  AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
-  AC_MSG_RESULT("Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation")
-])
