@@ -1,5 +1,9 @@
 2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>
 
+	* gconf/gconf.m4.in: remove duplicate macro
+	
+2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>
+
         * gconf/gconf.m4.in: New file. GCONF_SCHEMA_CONFIG_SOURCE macro
 	* configure.in: add gconf.m4 to AC_OUTPUT
         * Makefile.am: add gconf.m4 to EXTRA_DIST and install-data-local
